k8s/plataforma-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plataforma-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plataformaservice
  template:
    metadata:
      labels:
        app: plataformaservice
    spec:
      containers:
        - name: plataformaservice
          image: rusok/plataforma:2.2
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: plataforma-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: plataformaservice
  ports:
    - name: plataformaservice
      protocol: TCP
      port: 8080
      targetPort: 8080
