k8s/sqlserver-plataforma-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sqlserver-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: misqlservice
  template:
    metadata:
      labels:
        app: misqlservice
    spec:
      containers:
        - name: misqlservice
          image: mcr.microsoft.com/mssql/server:2022-latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 1433
          volumeMounts:
            - mountPath: /var/opt/mssql/data
              name: miservidorsqlserver
      volumes:
        - name: miservidorsqlserver
          persistentVolumeClaim:
            claimName: sqlserver-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: sqlserver-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: misqlservice
  ports:
    - name: misqlservice
      protocol: TCP
      port: 1433
      targetPort: 1433
---
apiVersion: v1
kind: Service
metadata:
  name: sqlserver-loadbalancer-service
spec:
  type: LoadBalancer
  selector:
    app: misqlservice
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
