k8s/ingress-para-nginx-servicio.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-servicio
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: pepe.com
      http:
        paths:
          - path: /api/Estudiante
            pathType: Prefix
            backend:
              service:
                name: plataforma-clusterip-service
                port: 
                  number: 8080
          - path: /api/Historial
            pathType: Prefix
            backend:
              service:
                name: campus-clusterip-service
                port: 
                  number: 8080
